--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   page_transition: ^2.0.5
   cloud_firestore: ^3.1.7
   firebase_core: ^1.12.0
+  validators: ^3.0.0
 
   flutter:
     sdk: flutter
