--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^3.1.7
   firebase_core: ^1.12.0
   validators: ^3.0.0
+  scroll_app_bar: ^2.0.0
 
   flutter:
     sdk: flutter
